CLM-29669 Adds options to demo.sh and demo.bat (#12057)